--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href=“tracy-la.github.io/style.css” rel=“stylesheet” type=“text/css”/>
+    <title>yep</title>
+<link  rel=“stylesheet” href=“style.css”/>
 
 </head>
 <body>
