--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>yep</title>
-<link  rel=“stylesheet” href=“style.css”/>
+<link href="style.css" rel=“stylesheet”/>
 
 </head>
 <body>
