--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>yep</title>
-<link href="style.css" rel=“stylesheet”/>
+<link rel ="stylesheet" href="https://tracy-la.github.io/style.css"/>
 
 </head>
 <body>
