--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>yep</title>
+    <title>Test Website</title>
 <link rel ="stylesheet" href="https://tracy-la.github.io/style.css"/>
 
 </head>
 <body>
 
-<h1>| TRACY LA | </h1>
+<h1>TRACY LA</h1>
 
   <div id="menuBackground">
     <div id="menuContainer">
