--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Test Website</title>
-<link rel ="stylesheet" href="https://tracy-la.github.io/style.css"/>
+<link rel ="stylesheet" href="style.css"/>
 
 </head>
 <body>
