--- a/index.htm
+++ b/index.htm
@@ -39,12 +39,13 @@
   <h2><a class="anchor" name="about">About Me</a></h2>
     <h3>WEB DESIGNER / DEVELOPER</h3>
 
-    <div class="clearfix"><img src="http://i66.tinypic.com/2rzuhxi.jpg" alt="personal headshot" width="240" class="img">Hello there! My name is Tracy and I am a freelance <strong>web designer</strong>, <strong>developer</strong>, and <strong>graphic designer</strong>. I have been developing and designing websites for many years, but I mostly did it as an enjoyable creative hobby and outlet. Today, I am a part-time web designer and content editor at the University of California, Irvine, where I have developed, designed, and currently maintain several department websites for the campus, as well as flyers and other graphics.<br /><br />
+    <div class="clearfix"><img src="http://i66.tinypic.com/2rzuhxi.jpg" alt="personal headshot" width="240" class="img">Hello! My name is Tracy and I am a freelance <strong>web designer</strong>, <strong>developer</strong>, and <strong>graphic designer</strong>. I have been developing and designing websites for many years, but I mostly did it as an enjoyable creative hobby and outlet.<br /><br />
    
-   I have done several freelance projects throughout the last several years for friends, family, organizations, and colleagues, and it has been a long-standing dream of mine to finally develop a portfolio of the work I have done like the one you are viewing today. I hope you enjoy the content I have produced, as I would love to create and develop any designs, websites, flyers, or anything else you may be looking for, for you!<br /><br />
+   I have done several freelance projects throughout the last several years for friends, family, organizations, and colleagues, and it has been a long-standing dream of mine to finally develop a portfolio of the work I have done like the one you are viewing today. I hope you enjoy the content I have produced, as I would love to create and develop any designs, websites, flyers, or anything else you may be looking for, for you!</div></div></div>
+<br /><br />
    
-   Just scroll a little bit down to check out my skills and my portfolio!</div></div></div>
-</div>
+   Just scroll a little bit down to check out my skills and my portfolio!
+    </div>
 
 <div class="main-content-2">
   <div class="_text2"><h2><a class="anchor" name="skills">Some of My Skills</a></h2>
