--- a/index.htm
+++ b/index.htm
@@ -133,7 +133,7 @@
   </div>
 
 <div class="main-content-5">
-  <div align="center"><div class="_text5"><a name="portfolio"></a><h2>Get In Touch!</h2>
+  <div align="center"><div class="_text5"><a name="portfolio"></a><h2>Get In Touch!</h2> <h3>Fill out the Contact Form below.</h3>
    
     Want to work together? Send me an email at <a href="mailto:tracyla858@gmail.com">tracyla858@gmail.com. </a><br /><br />
     
