--- a/index.htm
+++ b/index.htm
@@ -139,6 +139,12 @@
   </div>
   </div>
   </div>
+    
+<div class="main-content-6">
+  <div align="center"><div class="_text6"><br /><br />© Written and Designed by Tracy La
+  </div>
+  </div>
+  </div>
 </div>
 
 </body>
