--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 <head>
     <title>Tracy La</title>
 <link rel ="stylesheet" href="style.css"/>
+<script type="text/javascript" src="main.js"/>
 </head>
     
 <body>
