--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,6 @@
 <html lang=“en” xml:lang=“en” xmlns="http://www.w3.org/1999/xhtml">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <head>
     <title>Tracy La</title>
