--- a/index.htm
+++ b/index.htm
@@ -35,9 +35,9 @@
     
     
 <div id="parent">
-  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Other Designs<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png/v1/crop/x_0,y_540,w_816,h_516/fill/w_566,h_354,al_c,usm_0.66_1.00_0.01/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png"> </div>
-  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Other Designs<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png/v1/crop/x_0,y_540,w_816,h_516/fill/w_566,h_354,al_c,usm_0.66_1.00_0.01/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png"> </div>
-  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Other Designs<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png/v1/crop/x_0,y_540,w_816,h_516/fill/w_566,h_354,al_c,usm_0.66_1.00_0.01/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png"> </div>
+  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Websites<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_eb977f4a88fc4597882bd61adbb506e0~mv2_d_1894_1428_s_2.png/v1/fill/w_566,h_356,al_c,usm_0.66_1.00_0.01/430f28_eb977f4a88fc4597882bd61adbb506e0~mv2_d_1894_1428_s_2.png"> </div>
+  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Flyers<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png/v1/crop/x_0,y_540,w_816,h_516/fill/w_566,h_354,al_c,usm_0.66_1.00_0.01/430f28_15c984e1682b4762a7c260ab7b203c07~mv2.png"> </div>
+  <div class="child"><Br /><div class="button-container"><a class="button" href="#">Other Designs<a/></div><br /> <img  class="box-display-img" src="https://static.wixstatic.com/media/430f28_d52f5168df604f9e920cafbf32b8f7e7~mv2.png/v1/fill/w_566,h_354,al_c,lg_1/430f28_d52f5168df604f9e920cafbf32b8f7e7~mv2.png"> </div>
 </div>
 
 <div class="footer">
