--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,11 @@
 </div>
 
 <div id="row-1"><p><h2>WELCOME TO MY CREATIVE PORTFOLIO</h2> <br /></p>
-<p><center><span class="welcome">Hello! My name is Tracy. I'm a web designer and graphic designer based in Orange County, California.<br /> I create unique and responsive websites and graphics such as flyers, business cards, and more!</span><br /><br /></p>
+<p><center><span class="welcome">
+    Hello! My name is Tracy. I'm a web designer and graphic designer based in Orange County, California.<br /> 
+    I create unique and responsive websites and graphics such as flyers, business cards, and more!</span><br /><br />
+    
+    Click the links below to view some of my work.<br /><br /></p>
 
     </center></div>
     
