--- a/about.htm
+++ b/about.htm
@@ -1,4 +1,3 @@
-
 <html lang=“en” xml:lang=“en” xmlns="http://www.w3.org/1999/xhtml">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -20,8 +19,8 @@
     </div>
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">About</a>
+  <a href="index.htm">Home</a>
+  <a href="about.htm" class="active">About</a>
   <a href="#contact">Websites</a>
   <a href="#about">Flyers</a>
    <a href="#about">Other Designs</a>
